<resources>
    <string name="app_name">Upar</string>
    <string name="gcm_send_message">Device configured to receive messages</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">Device could not be configured properly</string>
    <string name="gcm_defaultSenderId">265070050748</string>
    <string name="button_register">Register</string>
    <string name="button_get">Request Sitting</string>
    <string name="button_give">Give Sitting</string>
    <string name="server_url">http://192.168.1.7:9000</string>
    <string name="sitting_server_url">http://192.168.1.7:9000</string>
    <string name="abhyasi">Abhyasi</string>
    <string name="prefect">Prefect</string>
    <string name="none">None</string>
    <string name="button_send">Send</string>
    <string name="message_hint">Type a message</string>
    <string name="abhyasi_hint">Abhyasi ID</string>
    <string name="name_hint">Full name or email address</string>
</resources>
